# vos-rs

./: .dockerignore  .env  .env.example  .env.production  .env.production.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  DEPLOY.md  Dockerfile  LICENSE-MIT  Makefile  README.md  WEB_GUIDE.md  config.yaml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
crates/call-core/: Cargo.toml  README.md
crates/call-core/benches/: concurrency.rs
crates/call-core/src/: acd.rs  billing.rs  call.rs  caller_identity.rs  cdr.rs  error.rs  lib.rs  manager.rs  outbound_policy.rs  pool_selection.rs  queue.rs  routing.rs  webhooks.rs
crates/call-core/src/routing/: health.rs  mod.rs  table.rs  tests.rs  types.rs
crates/call-core/tests/: call_state.rs  pool_capacity_fallback.rs  queue_tests.rs  routing_manager.rs
crates/cdr-core/: Cargo.toml  README.md
crates/cdr-core/src/: lib.rs  models.rs  schema.rs  termination_models.rs  termination_schema.rs  utils.rs
crates/cdr-core/src/store/: anti_fraud.rs  audit.rs  billing.rs  cdr.rs  copilot.rs  gateway.rs  llm_config.rs  mod.rs  number.rs  registration.rs  route.rs  sip_flow.rs  termination.rs  user.rs
crates/media-core/: Cargo.toml  README.md
crates/media-core/src/: conference.rs  config.rs  crypto.rs  dtmf.rs  energy.rs  g711.rs  lib.rs  live_transcode.rs  rtcp.rs  sdp.rs  time.rs  wav_reader.rs
crates/media-core/src/metrics/: mod.rs  quality.rs  receive.rs
crates/media-core/src/recording/: format.rs  mod.rs  model.rs  pool.rs  retention.rs  wav.rs  worker.rs  writer.rs
crates/media-core/tests/: sdp.rs
crates/rtp-core/: Cargo.toml  README.md
crates/rtp-core/src/: buffer_pool.rs  error.rs  lib.rs  packet.rs  payload.rs  port_lease.rs  rtcp.rs  srtp.rs  telephone_event.rs
crates/rtp-core/tests/: packet.rs  payload.rs  rtcp.rs  telephone_event.rs
crates/storage-core/: Cargo.toml  README.md
crates/storage-core/src/: config.rs  hw_accel.rs  lib.rs  local.rs  oss.rs
services/api-server/: Cargo.toml  README.md
services/api-server/src/: anti_fraud.rs  audit.rs  auth.rs  billing.rs  call_center.rs  calls.rs  cdr.rs  config.rs  copilot.rs  copilot_history.rs  copilot_stream.rs  dashboard.rs  details.rs  error.rs  gateways.rs  helpers.rs  hot_cache.rs  import.rs  ivr_menus.rs  llm_configs.rs  main.rs  media_cluster.rs  metrics.rs  middleware.rs  numbers.rs  recording.rs  registrations.rs  report.rs  routes.rs  sip_cluster.rs  speech.rs  system.rs  termination.rs  users.rs  utils.rs  v1.rs
services/api-server/src/billing/: anti_fraud.rs  billing.rs  cdr.rs  mod.rs  report.rs
services/api-server/src/cluster/: mod.rs
services/api-server/src/cluster/calls/: control.rs  helpers.rs  mod.rs  sipflow.rs
services/api-server/src/copilot/: history.rs  ladder.rs  mod.rs  schema.rs  stream.rs
services/api-server/src/copilot/tools/: billing.rs  dashboard.rs  extensions.rs  io.rs  mod.rs  network.rs
services/api-server/src/recording/: mod.rs
services/api-server/src/resources/: call_center.rs  ivr_menus.rs  mod.rs  numbers.rs  prompts.rs  registrations.rs  routes.rs  users.rs
services/api-server/src/resources/gateways/: manage.rs  mod.rs
services/api-server/src/system/: audit.rs  auth.rs  hot_cache.rs  mod.rs  system.rs  utils.rs
services/api-server/src/system/metrics/: mod.rs  rtcp.rs  snapshots.rs
services/api-server/src/termination/: did.rs  groups.rs  mod.rs  numbers.rs  policies.rs  pools.rs  trunks.rs
services/api-server/src/v1/: mod.rs  response.rs  routes.rs
services/cdr-worker/: Cargo.toml  README.md
services/cdr-worker/src/: main.rs
services/media-edge/: Cargo.toml  README.md
services/media-edge/benches/: xdp_media_engine_stress.rs
services/media-edge/src/: config.rs  main.rs
services/media-edge/src/media/: conference.rs  config.rs  crypto.rs  dtmf.rs  live_transcode.rs  metrics.rs  mod.rs  recording.rs  rtcp_processor.rs  sdp.rs  transcode.rs  utils.rs  wav.rs
services/media-edge/src/media/relay/: affinity.rs  ai_plugin.rs  allocation.rs  ebpf.rs  global_mesh.rs  io_uring.rs  listener.rs  mod.rs  path.rs  playback.rs  pool.rs  rtp_relay.bpf.c  sans_io.rs  (+3 more)
services/sip-edge/: Cargo.toml  README.md
services/sip-edge/src/: auth.rs  billing_settlement.rs  cdr.rs  cdr_handler.rs  cdr_spool.rs  config.rs  edge_state.rs  main.rs  manage.rs  media.rs  nats_cdr.rs  number_routing.rs  resource_lease.rs  routing.rs  sbc.rs  stun_client.rs  timers.rs  transaction.rs  upnp.rs  webhook_delivery.rs  webhooks.rs
services/sip-edge/src/cluster/: config.rs  inter_node.rs  mod.rs  node.rs  registration_sync.rs
services/sip-edge/src/handlers/: mod.rs
services/sip-edge/src/media/: conference.rs  config.rs  crypto.rs  dtmf.rs  energy_detector.rs  live_transcode.rs  metrics.rs  mod.rs  recording.rs  relay.rs  rtcp_processor.rs  sdp.rs  sdp_transform.rs  transcode.rs  utils.rs  wav.rs
services/sip-edge/src/net/: listeners.rs  mod.rs  nat.rs  pool.rs  stun_client.rs  transport.rs  upnp.rs
services/sip-edge/src/security/: deepfake_detector.rs  mod.rs  rules.rs  sbc.rs
services/sip-edge/src/sip/: auth.rs  dialog.rs  dispatcher.rs  handlers.rs  mod.rs  outbound.rs  outbound_reg.rs  registrar.rs  response.rs  sip_flow.rs  transaction.rs  utils.rs
services/sip-edge/src/tests/: all_tests.rs  connection_check_tests.rs  dtmf_cdr_tests.rs  gateway_health_probe_tests.rs  helpers.rs  invite_advanced_tests.rs  invite_basic_tests.rs  media_control_tests.rs  media_tests.rs  nat_transport_tests.rs  prack_early_media_tests.rs  realtime_billing_tests.rs  refer_transfer_tests.rs  register_tests.rs  sbc_tests.rs  security_auth_tests.rs  session_timer_tests.rs  topology_hiding_tests.rs  transaction_retransmit_tests.rs  unified_tests.rs  webhook_pipeline.rs
services/sip-router/: Cargo.toml  README.md
services/sip-router/src/: config.rs  discovery.rs  http.rs  main.rs  metrics.rs  proxy.rs  routes.rs  security.rs  tcp.rs
services/sip-router/src/proxy/: message.rs  mod.rs  tests.rs  transaction.rs
services/sip-router/src/tcp/: framing.rs  mod.rs  pool.rs  tests.rs
(+350 files in other folders)
