[workspace]
members = [
    "crates/call-core",
    "crates/cdr-core",
    "crates/rtp-core",
    "crates/sdp-core",
    "crates/sip-core",
    "crates/storage-core",
    "services/api-server",
    "services/cdr-worker",
    "services/sip-edge",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
rust-version = "1.89"
