[package]
name = "call-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sip-core = { path = "../sip-core" }
serde = { version = "1", features = ["derive"] }
dashmap = "6"
tokio = { version = "1", features = ["sync"] }
rand = "0.8"
arc-swap = "1"
uuid = { version = "1", features = ["v4"] }

[[bench]]
name = "concurrency"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sip-core = { path = "../sip-core" }
serde_json = "1"
