[package]
name = "cdr-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
call-core = { path = "../call-core" }
rust_decimal = { version = "1.36", features = ["serde-float"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "time", "derive", "rust_decimal"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tracing = "0.1"
