[package]
name = "media-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
opus = "0.3.0"
rtp-core = { path = "../rtp-core" }
sdp-core = { path = "../sdp-core" }
rubato = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"
