[package]
name = "rtp-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aes = "0.8"
base64 = "0.22"
ctr = "0.9"
hmac = "0.12"
sha1 = "0.10"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
