[package]
name = "api-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "time"] }
cdr-core = { path = "../../crates/cdr-core" }
anyhow = "1"
time = { version = "0.3", features = ["parsing"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
storage-core = { path = "../../crates/storage-core" }
prometheus-client = "0.23"
jsonwebtoken = "9"
md5 = "0.7"
async-nats = "0.38"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
redis = { version = "0.26.0", features = ["tokio-comp"] }
serde_yaml = "0.9"
