[package]
name = "media-edge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cdr-core = { path = "../../crates/cdr-core" }
sip-core = { path = "../../crates/sip-core" }
rtp-core = { path = "../../crates/rtp-core" }
sdp-core = { path = "../../crates/sdp-core" }
storage-core = { path = "../../crates/storage-core" }
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
dashmap = "6"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
num_cpus = "1"
libc = "0.2"
crossbeam-queue = "0.3"
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
sha2 = "0.10"
stun = "0.17.1"
webrtc-dtls = "0.10.0"
webrtc-srtp = "0.13.0"
webrtc-util = { version = "0.9.0", features = ["conn"], default-features = false }
